samples/_failures_safe/1761304465_7fcac0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a779e915.c: In function ‘main’:
./samples/SAFE/__tmp_a779e915.c:175:5: error: expected ‘,’ or ‘;’ at end of input
  175 |     Matrix *matrix2 = create_matrix
      |     ^~~~~~
./samples/SAFE/__tmp_a779e915.c:175:5: error: expected declaration or statement at end of input
